improving page performance

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
 
 <head>
 	<title>Копачинська гімназія</title>
@@ -10,7 +10,6 @@
 	<meta name="description" content="Копачинська гімназія - місце, де кожен учень може розвиватися та отримати якісну освіту. Дізнайтеся більше про наші програми та досягнення." />
 	<meta name="keywords" content="гімназія, освіта, навчання, розвиток, Копачинці, учні, програми, Копачинська гімназія">
 	<meta name="Copyright" content="Копачинська гімназія">
-
 </head>
 
 <body>
