--- a/public/index.html
+++ b/public/index.html
@@ -7,31 +7,36 @@
 	<link rel="icon" href="%PUBLIC_URL%/iconn.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#ffffff" />
-	<meta name="description" content="Копачинська гімназія - місце, де кожен учень може розвиватися та отримати якісну освіту. Дізнайтеся більше про наші програми та досягнення." />
-	<meta name="keywords" content="гімназія, освіта, навчання, розвиток, Копачинці, учні, програми, Копачинська гімназія">
+	<meta name="description"
+		content="Копачинська гімназія - місце, де кожен учень може розвиватися та отримати якісну освіту. Дізнайтеся більше про наші програми та досягнення." />
+	<meta name="keywords"
+		content="гімназія, освіта, навчання, розвиток, Копачинці, учні, програми, Копачинська гімназія">
 	<meta name="Copyright" content="Копачинська гімназія">
-		<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VG99248RYC"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-VG99248RYC"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-  gtag('config', 'G-VG99248RYC');
-</script>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-	})(window,document,'script','dataLayer','GTM-TVKCWVMR');</script>
+		gtag('config', 'G-VG99248RYC');
+	</script>
+	<!-- Google Tag Manager -->
+	<script>(function (w, d, s, l, i) {
+			w[l] = w[l] || []; w[l].push({
+				'gtm.start':
+					new Date().getTime(), event: 'gtm.js'
+			}); var f = d.getElementsByTagName(s)[0],
+				j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+					'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+		})(window, document, 'script', 'dataLayer', 'GTM-TVKCWVMR');</script>
 	<!-- End Google Tag Manager -->
 </head>
 
 <body>
-		<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TVKCWVMR"
-	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TVKCWVMR" height="0" width="0"
+			style="display:none;visibility:hidden"></iframe></noscript>
 	<!-- End Google Tag Manager (noscript) -->
 	<div id="root"></div>
 </body>
