fix categories card news

--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,15 @@
 <html lang="uk">
 
 <head>
-	<title>Копачинська гімназія</title>
+	<title>ХХX гімназія</title>
 	<meta charset="utf-8" />
 	<link rel="icon" href="%PUBLIC_URL%/iconn.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#ffffff" />
 	<meta name="description"
-		content="Копачинська гімназія - місце, де кожен учень може розвиватися та отримати якісну освіту. Дізнайтеся більше про наші програми та досягнення." />
-	<meta name="keywords"
-		content="гімназія, освіта, навчання, розвиток, Копачинці, учні, програми, Копачинська гімназія">
-	<meta name="Copyright" content="Копачинська гімназія">
+		content="ХХX гімназія - місце, де кожен учень може розвиватися та отримати якісну освіту. Дізнайтеся більше про наші програми та досягнення." />
+	<meta name="keywords" content="гімназія, освіта, навчання, розвиток, ХХX, учні, програми, ХХX гімназія">
+	<meta name="Copyright" content="ХХX гімназія">
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-VG99248RYC"></script>
 	<script>
